# WebProject1

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
WebProject/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: views.py
templates/: base.html  home.html
templates/registration/: login.html  signup.html
web/: admin.py  apps.py  models.py  views.py
